# cardv-auto-backup

./: Cargo.toml  README.md
crates/cardv-auto-backup/: Cargo.toml
crates/cardv-auto-backup/src/: execution_state.rs  main.rs  tg.rs  usb.rs
crates/cardv-auto-backup/src/gui/: login.rs  mod.rs  upload.rs
crates/usb/: Cargo.toml
crates/usb/src/: lib.rs
src/: main.rs  tg.rs
src/gui/: login.rs  mod.rs  uploader.rs
