[package]
name = "cardv-auto-backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb = { path = "../usb" }

eframe = { version = "0.24.1", features = ["persistence"] }
egui = { version = "0.24.1", features = ["persistence"] }
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
mp4 = "0.14.0"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Power",
] }
