[package]
name = "usb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
] }
